--- a/BookOnline/BookOnline.csproj
+++ b/BookOnline/BookOnline.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\BookOnline.Utility\BookOnline.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+  </ItemGroup>
+
 </Project>
