--- a/BookOnline/appsettings.json
+++ b/BookOnline/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BookOnline-36D52140-34F8-4F82-9387-C1E76EDA84A5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-KIQISOE\\MUSHFIQSQL;Database=BookOnlineDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
