--- a/BookOnline/BookOnline.csproj
+++ b/BookOnline/BookOnline.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Stripe.net" Version="39.33.0" />
+    <PackageReference Include="Twilio" Version="5.53.0" />
   </ItemGroup>
 
   <ItemGroup>
